Added docusign tests.

--- a/Geo-Location-Experiment/Views/Shared/_Layout.cshtml
+++ b/Geo-Location-Experiment/Views/Shared/_Layout.cshtml
@@ -43,7 +43,7 @@
         @RenderSection("SPAViews", required: false)
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p> @System.Configuration.ConfigurationManager.AppSettings["GeoLocation"]
         </footer>
     </div>
 
